# advent-of-code-2023

./: .gitignore
day1a/: CMakeLists.txt  README.md  extract.asm  main.c  sum.asm
day1b/: README.md  extract.asm  main.c  output.txt  reformat.py  sum.asm
day2a/: main.py
day2b/: main.py
